# MiGenieHASS

./: .gitignore  dockerfile  pyproject.toml
Postman/: MiGenie.postman_collection.json  MiGenineHASS.postman_collection.json
app/: main.py
app/Routes/: heating.py  poll.py  water.py
app/lib/: migenie.py  utils.py
